<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.Activity.SignUpActivity">

    <ImageView
        android:id="@+id/arrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="120dp"
        android:layout_height="120dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.785"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/imageDemo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Sign up"
        android:textColor="@color/tint"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toStartOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/editInfoLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="15dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/ass"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:padding="5dp"
                android:text="User Name:"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/tint"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/userName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_background"
                android:drawableLeft="@drawable/username"
                android:drawablePadding="20dp"
                android:ems="10"
                android:hint="@string/hint_name"
                android:imeOptions="actionNext"
                android:inputType="textCapWords"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textColorHint="@color/hint" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="User Email:"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/tint"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/userEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_background"
                android:drawableLeft="@drawable/useremail"
                android:drawablePadding="20dp"
                android:ems="10"
                android:hint="@string/hint_email"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textColorHint="@color/hint" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="User Contact:"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/tint"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/userContact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_background"
                android:drawableLeft="@drawable/contact"
                android:drawablePadding="20dp"
                android:ems="10"
                android:hint="@string/hint_contact"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textColorHint="@color/hint" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="User Password:"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/tint"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/userPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_background"
                android:drawableLeft="@drawable/userpass"
                android:drawablePadding="20dp"
                android:ems="10"
                android:hint="@string/hint_password"
                android:imeOptions="actionGo"
                android:inputType="textPassword"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textColorHint="@color/hint" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/birthday"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/ass"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/userBirthday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/edit_text_background"
                android:drawableRight="@drawable/ic_calender"
                android:drawablePadding="20dp"
                android:hint="Choose your Birthday"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textColorHint="@color/hint" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/gender"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/ass"
                android:textStyle="bold" />

            <RadioGroup
                android:id="@+id/gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/view_below"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radio1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true"
                    android:text="Male"
                    android:layout_margin="5dp"
                    android:background="@drawable/border"
                    android:textColor="@color/black" />

                <RadioButton
                    android:id="@+id/radio2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Female"
                    android:layout_margin="5dp"
                    android:background="@drawable/border"
                    android:textColor="@color/black" />

            </RadioGroup>

            <Button
                android:id="@+id/signUpBtn"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/carve_button_design"
                android:clickable="true"
                android:elevation="10dp"
                android:focusable="true"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="25dp"
                android:text="Sign up"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/white"
                android:textStyle="bold" />

        </LinearLayout>

    </ScrollView>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />


</androidx.constraintlayout.widget.ConstraintLayout>